fixed the horizontal scroll and tweaked the js

--- a/style.css
+++ b/style.css
@@ -2,4 +2,10 @@
 
 body {
     font-family: 'Hind Madurai', sans-serif;
+
+}
+
+html, body {
+    overflow-x: hidden;
+    max-width: 100vw;
 }
